# starlet-serializer

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
inc/StarletSerializer/data/: bmpData.hpp  cameraData.hpp  colourData.hpp  data.hpp  gridData.hpp  lightData.hpp  meshData.hpp  modelData.hpp  plyData.hpp  primitiveData.hpp  sceneData.hpp  textureData.hpp  transformData.hpp  velocityData.hpp
inc/StarletSerializer/parser/: bmpParser.hpp  imageParser.hpp  meshParser.hpp  parser.hpp  plyParser.hpp  sceneParser.hpp
inc/StarletSerializer/parser/image/: bmpParser.hpp  imageParserBase.hpp  tgaParser.hpp
inc/StarletSerializer/parser/mesh/: meshParserBase.hpp  plyParser.hpp
inc/StarletSerializer/utils/: log.hpp
inc/StarletSerializer/writer/: writer.hpp
inc/starlet-serializer/data/: base_data.hpp  cameraData.hpp  camera_data.hpp  colourData.hpp  grid_data.hpp  imageData.hpp  image_data.hpp  lightData.hpp  light_data.hpp  meshData.hpp  modelData.hpp  model_data.hpp  primitiveData.hpp  primitive_data.hpp  sceneData.hpp  scene_data.hpp  textureData.hpp  texture_data.hpp  transformData.hpp  velocityData.hpp  velocity_data.hpp
inc/starlet-serializer/parser/: image_parser.hpp  meshParser.hpp  mesh_parser.hpp  parser.hpp  sceneParser.hpp
inc/starlet-serializer/parser/image/: bmpParser.hpp  bmp_parser.hpp  imageParserBase.hpp  tgaParser.hpp  tga_parser.hpp
inc/starlet-serializer/parser/mesh/: meshParserBase.hpp  mesh_parser_base.hpp  obj_parser.hpp  ply_parser.hpp
src/parser/: bmpParser.cpp  cameraParser.cpp  colourParser.cpp  gridParser.cpp  imageParser.cpp  image_parser.cpp  lightParser.cpp  meshParser.cpp  mesh_parser.cpp  modelParser.cpp  parser.cpp  plyParser.cpp  primitiveParser.cpp  sceneParser.cpp  scene_parser.cpp  textureParser.cpp  velocityParser.cpp
src/parser/image/: bmpParser.cpp  bmp_parser.cpp  imageParserBase.cpp  image_parser_base.cpp  tgaParser.cpp  tga_parser.cpp
src/parser/mesh/: obj_parser.cpp  plyParser.cpp  ply_parser.cpp
src/parser/scene/: cameraParser.cpp  camera_parser.cpp  colourParser.cpp  colour_parser.cpp  gridParser.cpp  grid_parser.cpp  lightParser.cpp  light_parser.cpp  modelParser.cpp  model_parser.cpp  primitiveParser.cpp  primitive_parser.cpp  textureParser.cpp  texture_parser.cpp  velocity_parser.cpp
src/utils/: log.cpp
src/writer/: sceneWriter.cpp  scene_writer.cpp
tests/: CMakeLists.txt  image_parser_test.cpp  mesh_parser_test.cpp  parser_test.cpp  scene_parser_test.cpp  serializer_test.cpp  test_helpers.hpp
tests/image/: bmp_parser_test.cpp  tga_parser_test.cpp
tests/mesh/: obj_parser_test.cpp  ply_parser_test.cpp
